--- a/HedgeModManager/MainWindow.xaml
+++ b/HedgeModManager/MainWindow.xaml
@@ -56,22 +56,22 @@
                     <Grid/>
                 </TabItem>
                 <TabItem Header="Settings">
-                    <Grid>
-
-                        <GroupBox Header="Game &amp; ModLoader" HorizontalAlignment="Left" Height="150" Margin="10,10,0,0" VerticalAlignment="Top" Width="526">
+                <Grid>
+                    <GroupBox Header="Game &amp; ModLoader" HorizontalAlignment="Stretch"  Height="170" Margin="10,10,10,0" VerticalAlignment="Top" Width="526">
                             <Grid>
                                 <Button Content="Uninstall CPKREDIR"    Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164"/>
                                 <Button Content="Uninstall {0}"         Margin="10,38,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164"/>
-                                <CheckBox Content="Enable Debug Console" Margin="10,66,342,34" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <CheckBox Content="Enable Save File Redirection" Margin="10,86,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Label Content="Game Name: Unknown" Margin="179,8,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="152" Height="27" />
+                                <CheckBox Content="Enable CPKREDIR" Margin="10,66,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="{Binding Enabled}"/>
+                                <CheckBox Content="Enable Debug Console" Margin="10,86,342,34" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="{Binding EnableDebugConsole}"/>
+                                <CheckBox Content="Enable Save File Redirection" Margin="10,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="{Binding EnableSaveFileRedirection}"/>
+                                <Label x:Name="GameLbl"  Content="Game Name: Unknown" Margin="179,8,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="152" Height="27" />
                                 <Label Content="Loaders: Unknown" Margin="179,35,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="152" Height="27" />
                             </Grid>
                         </GroupBox>
-                        <GroupBox Header="HedgeModManager" HorizontalAlignment="Left" Height="202" Margin="10,165,0,0" VerticalAlignment="Top" Width="526">
+                        <GroupBox Header="HedgeModManager" HorizontalAlignment="Stretch" Height="212" Margin="10,175,10,0" VerticalAlignment="Top">
                             <Grid>
-                                <CheckBox Content="Check for ModLoader Updates" Margin="10,10,194,140"/>
-                                <CheckBox Content="Keep HedgeModManager open after starting a game" Margin="10,27,194,123"/>
+                                <CheckBox Content="Check for ModLoader Updates" Margin="10,10,194,150" IsChecked="{Binding CheckLoaderUpdates}"/>
+                                <CheckBox Content="Keep HedgeModManager open after starting a game" IsChecked="{Binding KeepOpen}" Margin="10,27,194,123"/>
                                 <Button Content="About HedgeModManager"         Margin="290,120,10,10" RenderTransformOrigin="0.508,-0.424"/>
                             </Grid>
                         </GroupBox>
