--- a/HedgeModManager/MainWindow.xaml
+++ b/HedgeModManager/MainWindow.xaml
@@ -59,20 +59,20 @@
                 <Grid>
                     <GroupBox Header="Game &amp; ModLoader" HorizontalAlignment="Stretch"   Height="170" Margin="10,10,10,0"    VerticalAlignment="Top" Width="516">
                         <Grid>
-                            <Button                             Content="Uninstall CPKREDIR"    Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164"/>
-                            <Button                             Content="Uninstall {0}"         Margin="10,38,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164"/>
-                            <CheckBox                           Content="Enable CPKREDIR" Margin="10,66,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="{Binding Enabled}"/>
-                            <CheckBox                           Content="Enable Debug Console" Margin="10,86,342,34" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="{Binding EnableDebugConsole}"/>
-                            <CheckBox                           Content="Enable Save File Redirection" Margin="10,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="{Binding EnableSaveFileRedirection}"/>
-                            <Label x:Name="Label_GameStatus"    Content="Game Name: Unknown" Margin="179,8,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="152" Height="27" />
-                            <Label x:Name="Label_MLVersion"     Content="Loaders: Unknown" Margin="179,35,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="152" Height="27" />
+                            <Button                             Content="Uninstall CPKREDIR"                                                             Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164"/>
+                            <Button                             Content="Uninstall {0}"                                                                  Margin="10,38,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164"/>
+                            <CheckBox                           Content="Enable CPKREDIR"               IsChecked="{Binding Enabled}"                    Margin="10,66,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                            <CheckBox                           Content="Enable Debug Console"          IsChecked="{Binding EnableDebugConsole}"         Margin="10,86,342,34" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            <CheckBox                           Content="Enable Save File Redirection"  IsChecked="{Binding EnableSaveFileRedirection}"  Margin="10,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            <Label x:Name="Label_GameStatus"    Content="Game Name: Unknown"                                                             Margin="179,8,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="152" Height="27" />
+                            <Label x:Name="Label_MLVersion"     Content="Loaders: Unknown"                                                               Margin="179,35,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="152" Height="27" />
                         </Grid>
                     </GroupBox>
                     <GroupBox Header="HedgeModManager"      HorizontalAlignment="Stretch"   Height="230" Margin="10,185,10,0"   VerticalAlignment="Top" Width="516">
                         <Grid>
-                            <CheckBox Content="Check for ModLoader Updates" Margin="10,10,194,150" IsChecked="{Binding CheckLoaderUpdates}"/>
-                            <CheckBox Content="Keep HedgeModManager open after starting a game" IsChecked="{Binding KeepOpen}" Margin="10,27,194,123"/>
-                            <Button Content="About HedgeModManager"         Margin="0,0,10,10" RenderTransformOrigin="0.508,-0.424" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="48" Width="195"/>
+                            <CheckBox Content="Check for ModLoader Updates"                     IsChecked="{Binding CheckLoaderUpdates}"    Margin="10,10,194,150"/>
+                            <CheckBox Content="Keep HedgeModManager open after starting a game" IsChecked="{Binding KeepOpen}"              Margin="10,27,194,123"/>
+                            <Button   Content="About HedgeModManager"                                                                       Margin="0,0,10,10" RenderTransformOrigin="0.508,-0.424" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="48" Width="195"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
